Fix plant alignment

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ button:hover {
 .habit-container {
   background-color: var(--primary-color);
   padding: 2rem;
-  padding-bottom: 4rem; /* Ensure space for the completed button */
+  padding-bottom: 4rem; 
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   position: relative;
@@ -165,14 +165,15 @@ button:hover {
 
 /* ========== 7. Plant Section ========== */
 .plant-section {
-  margin: 1rem;
+  flex: 1 1 30%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .plant-section img {
-  max-width: 50%; /* Adjust this percentage to your liking */
-  height: auto; /* Keeps the aspect ratio */
-  display: block;
-  margin: 0 auto; /* Centers the image */
+  max-width: 50%;
+  height: auto;
 }
 
 .plant-collection {
@@ -223,6 +224,15 @@ button:hover {
   .habit-container {
     padding: 1rem;
     padding-bottom: 4rem;
+  }
+
+  .habit-tracker-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .habit-container, .plant-section {
+    flex: 1 1 100%;
   }
 
   .navigation {
